--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <!---company 3-->
                     <div class="my-work-experience-company">
                         <h4 class="my-work-position"> Front-End Developer <span class="my-work-company">Freelance</span></h4>
-                        <p class="my-work-period">November 2021 - up to now<span class="my-work-devider"> | </span>   Country</p>
+                        <p class="my-work-period">November 2021 - up to now<span class="my-work-devider"> | </span> Lviv</p>
                         <ul class="my-work-duties">
                             <li class="my-work-duty">Learning HTML and CSS </li>
                             <li class="my-work-duty">Learning JavaScript</li>
@@ -65,7 +65,7 @@
                     <!---company 2-->
                     <div class="my-work-experience-company">
                         <h4 class="my-work-position"> Lawyer <span class="my-work-company">Lawyer company "Legal Expert" LCC</span></h4>
-                        <p class="my-work-period">January 2018 - up to now <span class="my-work-devider"> | </span>  Country</p>
+                        <p class="my-work-period">January 2018 - up to now <span class="my-work-devider"> | </span>  Lviv</p>
                         <ul class="my-work-duties">
                             <li class="my-work-duty">Legal support of enterprise clients in local self-government bodies, state authorities, other enterprises, institutions and organizations.  </li>
                             <li class="my-work-duty">Representation of interests of clients of the enterprise in courts.</li>
@@ -75,7 +75,7 @@
                     <!---company 1-->
                     <div class="my-work-experience-company">
                         <h4 class="my-work-position">Junior Lawyer<span class="my-work-company"> "Ob'yednannya Samopomich" Political Party</span></h4>
-                        <p class="my-work-period">October 2015 - Janyary 2018 <span class="my-work-devider">  | </span>  Country</p>
+                        <p class="my-work-period">October 2015 - Janyary 2018 <span class="my-work-devider">  | </span> Lviv</p>
                         <ul class="my-work-duties">
                             <li class="my-work-duty">Providing primary legal advice to residents of Lviv and the region.</li>
                             <li class="my-work-duty">Preparation of complaints, applications, appeals of citizens on housing and communal services, land, social issues, etc.</li>
@@ -88,7 +88,7 @@
                     <h3 class="main-content-title">Education</h3>
                     <h4><span class="my-work-company">Lviv Polytechnic National University</span></h4>
                     <h4 class="my-work-position">Lawyer</h4>
-                    <p class="my-work-period">September 2012 - June 2018 <span class="my-work-devider">  | </span>  Country</p>
+                    <p class="my-work-period">September 2012 - June 2018 <span class="my-work-devider">  | </span> Lviv</p>
                 </div>
             </div>
         </div>
