--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <!---company 2-->
                     <div class="my-work-experience-company">
-                        <h4 class="my-work-position"> Lawyer <span class="my-work-company">Lawyer company "Legal Expert" LCC</span></h4>
+                        <h4 class="my-work-position"> Lawyer <span class="my-work-company">Legal company "Legal Expert" LCC</span></h4>
                         <p class="my-work-period">January 2018 - up to now <span class="my-work-devider"> | </span>  Lviv</p>
                         <ul class="my-work-duties">
                             <li class="my-work-duty">Legal support of enterprise clients in local self-government bodies, state authorities, other enterprises, institutions and organizations.  </li>
